# rust_stm32g4_demo

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: adc.rs  main.rs  pwm.rs  tasks.rs
src/tasks/: accel.rs  button.rs  led.rs  sdcard.rs  uart.rs
