[package]
name = "rust_stm32g4_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
#cortex-m-rt = "0.7.3"
#panic-halt = "0.2.0"
#rtt-target = "0.5.0"
#critical-section = "1.1.2"

#stm32g4xx-hal = {version = "0.0.1", features=["stm32g474"]}

cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1.0"
embedded-hal = "1.0.0"
embassy-stm32 = {version = "0.2.0", features = [ "defmt", "time-driver-any", "stm32g474re", "memory-x", "unstable-pac", "exti", "time"] }
embassy-sync = {version = "0.6.2", features = ["defmt"]}
embassy-executor = {version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"]}
embassy-time = {version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
embassy-futures = "0.1.1"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m-semihosting = "0.5.0"

[profile.release]
debug = 2
#codegen-units = 1
#debug-assertions = true # <-
#incremental = false
#opt-level = 'z'         # <-
#overflow-checks = true  # <-

