[package]
name = "rust_stm32g4_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
#cortex-m-rt = "0.7.3"
#panic-halt = "0.2.0"
#rtt-target = "0.5.0"
#critical-section = "1.1.2"

#stm32g4xx-hal = {version = "0.0.1", features=["stm32g474"]}

cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
heapless = { version = "0.9.3", default-features = false }
static_cell = "2.1.1"
embedded-hal = "1.0.0"
embassy-stm32 = {version = "0.6.0", features = [ "defmt", "time-driver-any", "stm32g474re", "single-bank", "memory-x", "unstable-pac", "exti", "time"] }
embassy-sync = {version = "0.8.0", features = ["defmt"]}
embassy-executor = {version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt","defmt"]}
embassy-time = {version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
embassy-futures = "0.1.2"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
cortex-m-semihosting = "0.5.0"
#adxl345-eh-driver = "0.2.2"
adxl345-async = "0.2.1"
#adxl345-async = {version = "0.2.1", path = "../adxl345-async"}
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"

[profile.release]
debug = 2
#codegen-units = 1
#debug-assertions = true # <-
#incremental = false
#opt-level = 'z'         # <-
#overflow-checks = true  # <-

